tests/errors/runtime.FileNotFound.2.res
══╡ System Error ╞════════════════════════════════════════════════════════════════════════════════════════ <script> ══

  File not found: 
      ./test

  ┃ File: tests/errors/runtime.FileNotFound.2.art
  ┃ Line: 0
  ┃ 
  ┃    1 ║  dictionary "./test"
  ┃    2 ║